Added brew install gs to fix font issues

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,7 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - run: brew install gs
     - run: brew install imagemagick
       shell: bash
     - run: ${{ github.action_path }}/modify-icon.sh ${{ inputs.icon-file }} ${{ inputs.first-line }} ${{ inputs.second-line}} ${{ inputs.third-line }}
