--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   third-line:
     description: 'Third line'
     required: false
+  path_of_icons:
+    description: 'Path to folder of icons'
+    required: false
 runs:
   using: "composite"
   steps:
@@ -21,5 +24,5 @@ runs:
       shell: bash
     - run: brew install imagemagick
       shell: bash
-    - run: ${{ github.action_path }}/modify-icon.sh ${{ inputs.icon-file }} ${{ inputs.first-line }} ${{ inputs.second-line}} ${{ inputs.third-line }}
+    - run: ${{ github.action_path }}/modify-icon.sh ${{ inputs.icon-file }} ${{ inputs.first-line }} ${{ inputs.second-line}} ${{ inputs.third-line }} ${{ path_of_icons }}
       shell: bash
